# smartnix

./: .gitignore  README.md  makefile
bootloader/: build.mk
kernel/: image.ld  kernel.ld
make/: abigen.mk  bcompile.mk  board.mk  build.mk  compile.mk  ecompile.mk  engine.mk  fcompile.mk  hcompile.mk  help.mk  macros.mk  module-banjo.mk  module-driver.mk  module-drivertest.mk  module-efilib.mk  module-fidl.mk  module-fuzztest.mk  module-hostapp.mk  module-hostlib.mk  module-hosttest.mk  module-userapp.mk  module-userlib.mk  module.mk  (+4 more)
system/public/: BUILD.gn
system/public/zircon/: assert.h  compiler.h  errors.h  features.h  fidl.h  limits.h  listnode.h  pixelformat.h  process.h  processargs.h  rights.h  syscalls.abigen  syscalls.h  time.h  tls.h  types.h
system/public/zircon/boot/: bootdata.h  driver-config.h  e820.h  image.h  multiboot.h  netboot.h  sysconfig.h
system/public/zircon/device/: audio-codec.h  audio.h  block.h  bt-hci.h  camera.h  clk.h  device.h  display-controller.h  dmctl.h  ethertap.h  gpu.h  hidctl.h  i2c.h  intel-hda.h  ioctl-wrapper.h  ioctl.h  ktrace.h  media-codec.h  midi.h  nand.h  power.h  pty.h  qmi-transport.h  ram-nand.h  ramdisk.h  serial.h  sysinfo.h  test.h  thermal.h  tpm.h  usb-peripheral.h  vfs.h
system/public/zircon/driver/: binding.h
system/public/zircon/hw/: gpt.h  pci.h  usb-audio.h  usb-cdc.h  usb-hid.h  usb-hub.h  usb-mass-storage.h  usb-video.h  usb.h
system/public/zircon/syscalls/: debug.h  exception.h  hypervisor.h  iommu.h  log.h  object.h  pci.h  policy.h  port.h  profile.h  resource.h  smc.h  system.h  types.h
(+2332 files in other folders)
