
# If not building for Fuchsia (e.g., linux, macos) then binaries need to get
# zircon headers directly from source. Otherwise they come from sysroot.
config("public_config") {
  include_dirs = [ "." ]
  visibility = [ ":*" ]
}

# These headers are exported for use in building non-fuchsia-host binaries.
source_set("public") {
  public = [
    "zircon/compiler.h",
    "zircon/errors.h",
    "zircon/syscalls/object.h",
    "zircon/types.h",
  ]

  public_configs = [ ":public_config" ]
}
